--- a/style.css
+++ b/style.css
@@ -110,3 +110,212 @@ th ,tr {
     padding: 4px;
     text-align: center;
 }
+/*    Navigation Sabitleme    */
+.sticky {
+    background-color: green;
+    padding: 10px;
+    margin: 10px;
+    color: white;
+    position: sticky;
+    top: 20px;
+}
+.relative {
+    border: 1px solid red;
+    padding:  10px;
+    margin-top: 20px;
+    position: relative;
+
+}
+.relative2 {
+    background-color: red;
+    width: 400px;
+    height: 200px;
+    position: relative;
+}
+.absolute {
+    background-color: blue;
+    padding: 10px;
+    position: absolute;
+    top: 0px;
+    right: 150px;
+}
+.container {
+    display: flex;
+    border: 1px solid red;
+    column-gap: 10px;
+    height: 200px;
+    /* Yatayda hizalamak için justify content */
+    justify-content: space-around;
+}
+.kutu1 {
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+}
+.kutu2 {
+    border: 1px solid aqua;
+    display: flex;
+    align-items: end;
+}
+.kutu3 {
+    border: 1px solid purple;
+    display: flex;
+    align-items: start;
+}
+.kutu4 {
+    border: 1px solid orange;
+    display: flex;
+    align-items: center;
+}
+nav {
+    display: flex;
+    justify-content: space-evenly;
+}
+.block-a {
+    display: block;
+    background-color: red;
+}
+.inline-div {
+    display: inline;
+    background-color: aqua;
+}
+.container1 {
+    background-color: crimson;
+    margin-top: 30px;
+    /* float: left; */
+    display: flex;
+    /* flex-direction: row-reverse; */
+    flex-direction: column;
+    gap: 20px;
+}
+.container2 {
+    background-color: blue;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.boxes {
+    display: flex;
+    margin: 40px;
+    background-color: blueviolet;
+    color: white;
+    flex-direction: row;
+    align-items: stretch;
+}
+.box1 {
+    border: 2px solid crimson;
+    flex-grow: 3;
+}
+.box2 {
+    border: 2px solid black;
+    flex-grow: 5;
+}
+.box3 {
+    border: 2px solid green;
+    flex-grow: 2;
+}
+.box4 {
+    border: 2px solid blanchedalmond;
+    flex-grow: 7;
+}
+form {
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    gap: 15px;
+    margin: 40px;
+}
+form .emailDiv {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding: 10px;
+}
+form .passwordDiv {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding: 10px;
+}
+form button {
+    width: 150px;
+    background-color: blue;
+    border: none;
+    padding: 10px;
+    border-radius: 7px;
+    margin: auto;
+    color: white;
+    transition: all 0.3s;
+}
+input {
+    background-color: blueviolet;
+    border: none;
+    padding: 10px;
+    outline: none;
+    color: white;
+}
+input::placeholder {
+    color:yellow
+}
+button:hover {
+    background-color: brown;
+    cursor: pointer;
+}
+.index {
+    position: absolute;
+    z-index: -1;
+}
+a:hover {
+    color: red;
+}
+a:active {
+    color: black;
+}
+a:visited {
+    color: white;
+}
+.parent :first-child {
+    color: red;
+}
+.parent :last-child {
+    color: aqua;
+}
+.secici :nth-child(3):hover {
+    color: red;
+}
+.secici :nth-child(4) {
+    color: crimson;
+}
+.opacity {
+    opacity: 0.5;
+    transition: all 0.3s;
+}
+.opacity:hover {
+    opacity: 1;
+}
+select {
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    width: 100px;
+    text-align: center;
+}
+.hidden {
+    /* bu özellik gizler fakat öğe orada durur */
+    visibility: hidden;
+    /* display none ise öğeyi kaldırır  */
+    display: none;
+}
+.disabled {
+    background-color: red;
+    border: none;
+    padding: 10px;
+    border-radius: 7px;
+    color: white;
+    margin: 10px;
+}
+.disabled:disabled {
+    color: grey;
+}
